kubernetes/kong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: clouddns
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: funk.raas.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-kong-proxy
          servicePort: 80
  tls:
  - hosts:
    - funk.raas.dev
    secretName: funk-tls
